docs: :memo: Agrega explicaciones al código de los conceptos de ML
Agregué breves explicaciones de los distintos cálculos utilizados por el modelo de ML

--- a/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
+++ b/EPDS_1A_2C25_Trabajo_de_simulación_III.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1102,28 +1102,32 @@
       "\n",
       "MÉTRICAS DEL MODELO\n",
       "MAE Train: $1,129 USD\n",
+      "El Error Absoluto Medio indica, en promedio, \n",
+      "cuánto se alejan las predicciones del modelo de los datos reales.\n",
       "MAE Test:  $1,097 USD\n",
       "RMSE Test: $1,559 USD\n",
+      "El RMSE es la raíz cuadrada de la media de las diferencias \n",
+      "al cuadrado entre los valores observados y los predichos. \n",
+      "Siempre es no negativo, y los valores más bajos \n",
+      "indican un modelo mejor ajustado.\n",
       "R² Train:  0.4104 (41.04%)\n",
+      "R² explica la proporción de varianza de la variable dependiente que puede atribuirse \n",
+      "a la variable (o variables) independiente(s). Podemos considerarlo como una medida de \n",
+      "lo bien que nuestro modelo capta lo que los datos cuentan, \n",
+      "y cuánto queda como ruido sin explicar.\n",
+      "\n",
       "R² Test:   0.3647 (36.47%)\n",
+      "Verificación del overfitting (\"sobreajuste\"):\n",
+      "Ocurre cuando el modelo se ajusta demasiado a sus datos de entrenamiento, \n",
+      "impidiéndole realizar predicciones u obtener conclusiones precisas.\n",
       "\n",
       "El modelo generaliza bien (diferencia R²: 0.046)\n",
       "\n",
-      "VALIDACIÓN CRUZADA (5-FOLD):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "VALIDACIÓN CRUZADA (5-FOLD):\n",
+      "La validación cruzada K-Fold es una técnica que se utiliza para evaluar el rendimiento de \n",
+      "los modelos de Machine Learning. Garantiza que el modelo generaliza bien.\n",
       "R² promedio: 0.3445 (±0.0251)\n",
-      "R² por fold: ['0.371', '0.369', '0.340', '0.341', '0.301']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "R² por fold: ['0.371', '0.369', '0.340', '0.341', '0.301']\n",
       "MAE promedio: $1,177 (±$56)\n",
       "\n"
      ]
@@ -1261,7 +1265,7 @@
     "\n",
     "if nan_count_x > 0:\n",
     "    print(f\"Eliminando {nan_count_x} valores NaN generados en encoding...\")\n",
-    "    X = X.fillna(0)  # Rellenar NaN con 0 (seguro para variables dummy)\n",
+    "    X = X.fillna(0) \n",
     "\n",
     "# Verificar infinitos solo en columnas numéricas\n",
     "try:\n",
@@ -1287,7 +1291,7 @@
     "    max_features='sqrt',       \n",
     "    max_samples=0.8,           \n",
     "    random_state=42,\n",
-    "    n_jobs=1  # <-- CAMBIAR DE -1 A 1\n",
+    "    n_jobs=1 \n",
     ")\n",
     "model.fit(X_train, y_train)\n",
     "print(\"[MODELO] Entrenado exitosamente\\n\")\n",
@@ -1304,12 +1308,26 @@
     "\n",
     "print(\"MÉTRICAS DEL MODELO\")\n",
     "print(f\"MAE Train: ${mae_train:,.0f} USD\")\n",
+    "print(\"\"\"El Error Absoluto Medio indica, en promedio, \n",
+    "cuánto se alejan las predicciones del modelo de los datos reales.\"\"\")\n",
     "print(f\"MAE Test:  ${mae_test:,.0f} USD\")\n",
     "print(f\"RMSE Test: ${rmse_test:,.0f} USD\")\n",
+    "print(\"\"\"El RMSE es la raíz cuadrada de la media de las diferencias \n",
+    "al cuadrado entre los valores observados y los predichos. \n",
+    "Siempre es no negativo, y los valores más bajos \n",
+    "indican un modelo mejor ajustado.\"\"\")\n",
     "print(f\"R² Train:  {r2_train:.4f} ({r2_train*100:.2f}%)\")\n",
+    "print (\"\"\"R² explica la proporción de varianza de la variable dependiente que puede atribuirse \n",
+    "a la variable (o variables) independiente(s). Podemos considerarlo como una medida de \n",
+    "lo bien que nuestro modelo capta lo que los datos cuentan, \n",
+    "y cuánto queda como ruido sin explicar.\n",
+    "\"\"\")\n",
     "print(f\"R² Test:   {r2_test:.4f} ({r2_test*100:.2f}%)\")\n",
     "\n",
     "# Verificar overfitting\n",
+    "print(\"\"\"Verificación del overfitting (\"sobreajuste\"):\n",
+    "Ocurre cuando el modelo se ajusta demasiado a sus datos de entrenamiento, \n",
+    "impidiéndole realizar predicciones u obtener conclusiones precisas.\"\"\")\n",
     "diff_r2 = r2_train - r2_test\n",
     "if diff_r2 > 0.1:\n",
     "    print(f\"\\nAdvertencia: Posible overfitting (diferencia R²: {diff_r2:.3f})\")\n",
@@ -1318,12 +1336,14 @@
     "print()\n",
     "\n",
     "print(\"VALIDACIÓN CRUZADA (5-FOLD):\")\n",
-    "cv_scores = cross_val_score(model, X, y, cv=5, scoring='r2', n_jobs=1)  # <-- CAMBIAR DE -1 A 1\n",
+    "print(\"\"\"La validación cruzada K-Fold es una técnica que se utiliza para evaluar el rendimiento de \n",
+    "los modelos de Machine Learning. Garantiza que el modelo generaliza bien.\"\"\")\n",
+    "cv_scores = cross_val_score(model, X, y, cv=5, scoring='r2', n_jobs=1) \n",
     "print(f\"R² promedio: {cv_scores.mean():.4f} (±{cv_scores.std():.4f})\")\n",
     "print(f\"R² por fold: {[f'{score:.3f}' for score in cv_scores]}\")\n",
     "\n",
     "# Evaluar también MAE con validación cruzada\n",
-    "cv_mae = -cross_val_score(model, X, y, cv=5, scoring='neg_mean_absolute_error', n_jobs=1)  # <-- CAMBIAR DE -1 A 1\n",
+    "cv_mae = -cross_val_score(model, X, y, cv=5, scoring='neg_mean_absolute_error', n_jobs=1)\n",
     "print(f\"MAE promedio: ${cv_mae.mean():,.0f} (±${cv_mae.std():,.0f})\")\n",
     "print()"
    ]
@@ -1339,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1646,13 +1666,12 @@
    "metadata": {},
    "source": [
     "### Conclusiones del modelo de Machine Learning\n",
-    "\n",
-    "El modelo identifica correctamente que la experiencia, edad y forma de pago en dólares son los predictores más importantes del salario. Esto coincide con nuestro análisis previo, donde también destacamos estas variables como parte de la combinación ganadora. De esta forma validamos nuestras conclusiones y reforzamos la idea de que estas características son clave para maximizar el salario en el sector IT."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1662,9 +1681,9 @@
       "\n",
       "El modelo Random Forest revela que:\n",
       "\n",
-      "* Precision (R² test): 36.5% - Explica 36.5% de la variabilidad salarial\n",
+      "* Precision (R² test): 36.5% - Explica 36.5% de la variabilidad salarial. \n",
       "* Precision (R² CV): 34.5% - Validación cruzada confirma estabilidad\n",
-      "* Error promedio: $1,097 USD/mes (±$56)\n",
+      "* Error promedio: $1,097 USD/mes (±$56). \n",
       "* Overfitting: Controlado (diferencia R²: 0.046)\n",
       "* Factor mas determinante: Experiencia (25.3% de importancia)\n",
       "\n",
@@ -1683,9 +1702,9 @@
     "print(f\"\"\"\n",
     "El modelo Random Forest revela que:\n",
     "\n",
-    "* Precision (R² test): {r2_test:.1%} - Explica {r2_test*100:.1f}% de la variabilidad salarial\n",
+    "* Precision (R² test): {r2_test:.1%} - Explica {r2_test*100:.1f}% de la variabilidad salarial. \n",
     "* Precision (R² CV): {cv_scores.mean():.1%} - Validación cruzada confirma estabilidad\n",
-    "* Error promedio: ${mae_test:,.0f} USD/mes (±${cv_mae.std():,.0f})\n",
+    "* Error promedio: ${mae_test:,.0f} USD/mes (±${cv_mae.std():,.0f}). \n",
     "* Overfitting: {'Controlado' if diff_r2 < 0.2 else 'Presente'} (diferencia R²: {diff_r2:.3f})\n",
     "* Factor mas determinante: {top_cat} ({top_val:.1f}% de importancia)\n",
     "\n",
@@ -1694,6 +1713,13 @@
     "2. {feature_imp_df.iloc[1]['Variable']}: {feature_imp_df.iloc[1]['Importancia_%']:.2f}%\n",
     "3. {feature_imp_df.iloc[2]['Variable']}: {feature_imp_df.iloc[2]['Importancia_%']:.2f}%\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El modelo identifica correctamente que la experiencia, edad y forma de pago en dólares son los predictores más importantes del salario. Esto coincide con nuestro análisis previo, donde también destacamos estas variables como parte de la combinación ganadora. De esta forma validamos nuestras conclusiones y reforzamos la idea de que estas características son clave para maximizar el salario en el sector IT."
    ]
   },
   {
